# core-cli

./: .gitignore  Cargo.toml  Makefile  README.md  install
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs
crates/cli/tests/: cli_tests.rs  integration_tests.rs
crates/console/: Cargo.toml
crates/console/src/: base.rs  console.rs  lib.rs
crates/error/: Cargo.toml
crates/error/src/: error.rs  lib.rs
crates/error/tests/: unit_test.rs
crates/modules/: Cargo.toml
crates/modules/src/: lib.rs  xcb.rs  xcbkey.rs
crates/modules/tests/: xcb_tests.rs  xcbkey_tests.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: go_core.rs  lib.rs  mock.rs
crates/rpc/tests/: go_core_tests.rs
crates/types/: Cargo.toml
crates/types/src/: account.rs  lib.rs  response.rs
crates/types/tests/: account_tests.rs  response_tests.rs
crates/utils/: Cargo.toml
crates/utils/src/: utils.rs
