[package]
authors = { workspace = true }
description = "Command Line Interface used in Core-CLI"
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["core blockchain", "xcb", "cli", "cli"]
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
name = "cli"
publish = true

[dependencies]
structopt.workspace = true

assert_cmd = {version = "2.0.16"}
predicates = {version = "3.1.2"}
types.workspace = true
utils.workspace = true
dirs.workspace = true