[package]
authors = { workspace = true }
description = "List of modules and comamands used in Core-CLI"
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["core blockchain", "xcb", "cli", "modules"]
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
name = "modules"
publish = true

[dependencies]
rpc.workspace = true
cli-error.workspace = true
tokio.workspace = true
async-trait.workspace = true
types.workspace = true
rand.workspace = true
rand_core.workspace = true
hex.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
utils.workspace = true

atoms-signer-wallet.workspace = true
atoms-signer.workspace = true
atoms-rpc-types.workspace = true

xcb-keystore.workspace = true

rpassword = "5.0"

[dev-dependencies]
base-primitives.workspace = true